# driftgate-sdk

contracts/: COMPATIBILITY_POLICY.md  headless-openapi.yaml  package.json  tsconfig.build.json  v4-openapi.yaml
contracts/baselines/: v4-openapi-baseline.json
contracts/examples/: error-envelope.json  headless-run-request.json  headless-run-response.json  v4-error-envelope.json  v4-execute-request.json  v4-execute-response.json  v4-session-start-request.json  v4-session-start-response.json
contracts/src/: index.ts
csharp/: README.md
csharp/examples/: HelloWorld.cs
csharp/tests/: DriftGateSdk.Tests.csproj  EnvelopeTests.cs
docs/sdk/: response-envelope.md
java/: README.md  pom.xml
java/examples/: HelloWorld.java
php/: README.md  composer.json
php/examples/: hello_world.php
php/src/: DriftGateClient.php
php/tests/: EnvelopeTest.php
python/: README.md  pyproject.toml
python/examples/: full.py  hello_world.py
python/src/driftgate_sdk/: __init__.py  auth.py  client.py  errors.py  models.py  retries.py
python/src/driftgate_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/tests/: _support.py  test_errors.py  test_idempotency.py  test_runs.py  test_v4_envelope.py
ruby/: README.md  driftgate-sdk.gemspec
ruby/examples/: hello_world.rb
ruby/lib/: driftgate_sdk.rb
ruby/test/: test_envelope.rb
typescript/: README.md  package.json
typescript/examples/: full.ts  hello-world.ts
typescript/src/: index.ts
workflow-compiler/: package.json
workflow-compiler/src/: compiler.test.ts  compiler.ts  index.ts  schema.ts
(+11 files in other folders)
